examples include the new palette

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -238,7 +238,7 @@
         "    xlabel='Time Point',\n",
         "    ylabel='Measurement',\n",
         "    errorbar='se',\n",
-        "    palette={'Control': '#8E8EC1', 'Treated': '#75B375'},\n",
+        "    palette=\"RdGyBu_r\",\n",
         ")\n",
         "plt.show()\n"
       ]
@@ -334,7 +334,7 @@
         "    xlabel=\"Cell Type\",\n",
         "    ylabel=\"Viability (%)\",\n",
         "    errorbar=\"se\",\n",
-        "    palette={\"Vehicle\": \"#8E8EC1\", \"Drug\": \"#E67E7E\"},\n",
+        "    palette={\"Vehicle\": \"#8E8EC1\", \"Drug\": \"#60a8a8\"},\n",
         "    hatch_map={\"24h\": \"\", \"48h\": \"///\"},\n",
         "    figsize=(8, 5)\n",
         ")\n",
@@ -372,7 +372,7 @@
         "    title='Gene Expression Levels (Horizontal)',\n",
         "    xlabel='Expression Level',\n",
         "    ylabel='Gene',\n",
-        "    palette={'Upregulated': '#75B375', 'Downregulated': '#E67E7E'},\n",
+        "    palette=\"RdGyBu\",\n",
         "    errorbar=None,\n",
         "    alpha=0.3,\n",
         "    order=horizontal_data['gene'].tolist()\n",
@@ -762,6 +762,7 @@
         "    title='Point Plot with Hue Grouping',\n",
         "    xlabel='Time Point',\n",
         "    ylabel='Measurement',\n",
+        "    palette=\"RdGyBu_r\"\n",
         ")\n",
         "ax.grid(axis=\"y\")\n",
         "plt.show()\n"
@@ -787,7 +788,7 @@
         "    y='measurement',\n",
         "    hue='group',\n",
         "    markers=[\"o\", \"D\"],\n",
-        "    palette={'Control': '#8E8EC1', 'Treated': '#75B375'},\n",
+        "    palette=\"RdGyBu_r\",\n",
         "    title='Point Plot with Custom Markers',\n",
         "    xlabel='Time Point',\n",
         "    ylabel='Measurement',\n",
@@ -816,7 +817,7 @@
         "    y='measurement',\n",
         "    hue='group',\n",
         "    linestyles=[\"-\", \":\"],\n",
-        "    palette={'Control': '#8E8EC1', 'Treated': '#75B375'},\n",
+        "    palette=\"RdGyBu_r\",\n",
         "    title='Point Plot with Custom Line Styles',\n",
         "    xlabel='Time Point',\n",
         "    ylabel='Measurement',\n",
@@ -847,7 +848,7 @@
         "    errorbar='se',\n",
         "    markers=[\"o\", \"D\"],\n",
         "    linestyles=[\"-\", \":\"],\n",
-        "    palette={'Control': '#8E8EC1', 'Treated': '#75B375'},\n",
+        "    palette=\"RdGyBu_r\",\n",
         "    title='Fully Customized Point Plot',\n",
         "    xlabel='Time Point',\n",
         "    ylabel='Measurement',\n",
@@ -875,6 +876,7 @@
         "    x='time',\n",
         "    y='measurement',\n",
         "    hue='group',\n",
+        "    palette=\"RdGyBu_r\",\n",
         "    errorbar='se',\n",
         "    title='Point Plot with Standard Error',\n",
         "    xlabel='Time Point',\n",
@@ -903,6 +905,7 @@
         "    x='time',\n",
         "    y='measurement',\n",
         "    hue='group',\n",
+        "    palette=\"RdGyBu_r\",\n",
         "    errorbar='sd',\n",
         "    title='Point Plot with Standard Deviation',\n",
         "    xlabel='Time Point',\n",
@@ -969,18 +972,14 @@
         "        return 'Risk'  # Risk (lower CI > 1)\n",
         "    else:\n",
         "        return 'Non-significant'  # Non-significant (CI crosses 1)\n",
-        "palette = {\n",
-        "    \"Risk\": \"#e67e7e\",\n",
-        "    \"Non-significant\": \"0.5\",\n",
-        "    \"Protective\": \"#5D83C3\",\n",
-        "}\n",
         "genetic_data['Significance'] = genetic_data.apply(get_significance, axis=1)\n",
         "fig, ax = pp.pointplot(\n",
-        "    data=genetic_data,\n",
+        "    data=genetic_data.sort_values(\"log2_or\", ascending=False),\n",
         "    x='log2_or',\n",
         "    y='gene',\n",
         "    hue='Significance',\n",
-        "    palette=palette,\n",
+        "    hue_order=(\"Risk\", \"Non-significant\", \"Protective\"),\n",
+        "    palette=\"RdGyBu\",\n",
         "    linestyle=\"none\",\n",
         "    errorbar=('custom', ('log2_lower', 'log2_upper')),\n",
         "    capsize=0.1,\n",
@@ -1999,7 +1998,7 @@
         "    xlabel='Time',\n",
         "    ylabel='Measurement',\n",
         "    cloud_alpha=0.6,\n",
-        "    palette=['#5D83C3', '#e67e7e'],\n",
+        "    palette=\"RdGyBu_r\",\n",
         "    box_offset=0.1,\n",
         "    rain_offset=0.1,\n",
         ")\n",
@@ -2030,7 +2029,7 @@
         "    xlabel='Measurement',\n",
         "    ylabel='Time',\n",
         "    cloud_alpha=0.6,\n",
-        "    palette=['#5D83C3', '#e67e7e'],\n",
+        "    palette=\"RdGyBu_r\",\n",
         "    figsize=(4, 7),\n",
         "    box_offset=0.1,\n",
         "    rain_offset=0.2,\n",
@@ -2141,7 +2140,7 @@
         "    cloud_alpha=0.3,\n",
         "    box_kws=dict(alpha=0.5),\n",
         "    rain_kws=dict(alpha=0.8, linewidth=0),\n",
-        "    palette=['#5D83C3', '#e67e7e'],\n",
+        "    palette=\"RdGyBu_r\",\n",
         "    box_offset=0.1,\n",
         "    rain_offset=0.1,\n",
         ")\n",
