remove test_*.py

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -531,9 +531,9 @@
         "    xlabel='X Variable',\n",
         "    ylabel='Y Variable',\n",
         "    alpha=0.2,\n",
-        "    figsize=(8, 6),\n",
-        "    legend_kws=dict(hue_label=\"Continuous Score\")\n",
+        "    legend_kws=dict(hue_label=\"Continuous Score\"),\n",
         ")\n",
+        "ax.margins(0.1)\n",
         "plt.show()\n"
       ]
     },
@@ -577,7 +577,6 @@
         "    title='Differential Expression Analysis',\n",
         "    xlabel='Condition',\n",
         "    ylabel='Cell Type',\n",
-        "    margins=0.2\n",
         ")\n",
         "plt.show()\n"
       ]
@@ -657,7 +656,6 @@
         "    title='Tissue Expression Over Time',\n",
         "    xlabel='Time Point',\n",
         "    ylabel='Tissue',\n",
-        "    margins=0.15\n",
         ")\n",
         "plt.show()\n"
       ]
