h and w offsets in heatmap

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -94,7 +94,17 @@
         "    - [Using Color Palettes](#using-color-palettes)\n",
         "    - [Context-Based Styling](#context-based-styling)\n",
         "    - [Saving Figures with Custom Settings](#saving-figures-with-custom-settings)\n",
-        "    - [Best Practices Summary](#best-practices-summary)\n"
+        "    - [Best Practices Summary](#best-practices-summary)\n",
+        "- [13. Heatmap Examples](#13-heatmap-examples)\n",
+        "    - [Simple Heatmap (Wide Format)](#simple-heatmap-(wide-format))\n",
+        "    - [Annotated Heatmap](#annotated-heatmap)\n",
+        "    - [Heatmap from Long-Format Data](#heatmap-from-long-format-data)\n",
+        "    - [Dot Heatmap (Bubble Plot)](#dot-heatmap-(bubble-plot))\n",
+        "    - [Clustered Heatmap](#clustered-heatmap)\n",
+        "    - [Complex Heatmap with Margin Plots](#complex-heatmap-with-margin-plots)\n",
+        "    - [Dot Heatmap for GO Enrichment](#dot-heatmap-for-go-enrichment)\n",
+        "    - [Square Heatmap](#square-heatmap)\n",
+        "    - [Complex Heatmap Without Dendrograms](#complex-heatmap-without-dendrograms)\n"
       ]
     },
     {
@@ -3169,6 +3179,390 @@
       "outputs": [],
       "source": [
         "print(\"\\nConfiguration complete!\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 13. Heatmap Examples\n",
+        "\n",
+        "This example demonstrates the heatmap capabilities in PubliPlots,\n",
+        "including standard heatmaps, dot heatmaps, clustered heatmaps,\n",
+        "and complex heatmaps with margin plots.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import publiplots as pp\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Set style\n",
+        "pp.set_notebook_style()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Simple Heatmap (Wide Format)\n",
+        "Create a basic heatmap from a matrix DataFrame.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create sample expression matrix\n",
+        "np.random.seed(42)\n",
+        "genes = ['TP53', 'BRCA1', 'EGFR', 'KRAS', 'MYC', 'PIK3CA', 'PTEN', 'RB1']\n",
+        "samples = ['Patient_' + str(i) for i in range(1, 7)]\n",
+        "expression_matrix = pd.DataFrame(\n",
+        "    np.random.randn(len(genes), len(samples)),\n",
+        "    index=genes,\n",
+        "    columns=samples\n",
+        ")\n",
+        "# Create heatmap with diverging colormap centered at 0\n",
+        "fig, ax = pp.heatmap(\n",
+        "    expression_matrix,\n",
+        "    cmap='RdBu_r',\n",
+        "    center=0,\n",
+        "    title='Gene Expression Heatmap',\n",
+        "    xlabel='Samples',\n",
+        "    ylabel='Genes',\n",
+        ")\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Annotated Heatmap\n",
+        "Display values inside each cell.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig, ax = pp.heatmap(\n",
+        "    expression_matrix,\n",
+        "    cmap='viridis',\n",
+        "    annot=True,\n",
+        "    fmt='.1f',\n",
+        "    linewidths=0.5,\n",
+        "    linecolor='white',\n",
+        "    title='Annotated Expression Matrix',\n",
+        ")\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Heatmap from Long-Format Data\n",
+        "Use x, y, value parameters for tidy data.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create long-format data\n",
+        "long_data = []\n",
+        "for gene in genes:\n",
+        "    for sample in samples:\n",
+        "        long_data.append({\n",
+        "            'gene': gene,\n",
+        "            'sample': sample,\n",
+        "            'expression': np.random.randn(),\n",
+        "        })\n",
+        "long_df = pd.DataFrame(long_data)\n",
+        "fig, ax = pp.heatmap(\n",
+        "    long_df,\n",
+        "    x='sample',\n",
+        "    y='gene',\n",
+        "    value='expression',\n",
+        "    cmap='coolwarm',\n",
+        "    center=0,\n",
+        "    title='Heatmap from Long-Format Data',\n",
+        "    legend_kws={'value_label': 'Expression (Z-score)'},\n",
+        ")\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Dot Heatmap (Bubble Plot)\n",
+        "Use size encoding for an additional variable, perfect for\n",
+        "enrichment analysis or differential expression results.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create enrichment-style data\n",
+        "pathways = ['Cell Cycle', 'Apoptosis', 'DNA Repair', 'Metabolism',\n",
+        "            'Immune Response', 'Signaling', 'Transcription']\n",
+        "conditions = ['Treatment A', 'Treatment B', 'Control']\n",
+        "enrichment_data = []\n",
+        "for pathway in pathways:\n",
+        "    for condition in conditions:\n",
+        "        enrichment_data.append({\n",
+        "            'pathway': pathway,\n",
+        "            'condition': condition,\n",
+        "            'enrichment': np.random.uniform(-2, 2),\n",
+        "            'pvalue': np.random.uniform(0.001, 0.1),\n",
+        "        })\n",
+        "enrichment_df = pd.DataFrame(enrichment_data)\n",
+        "fig, ax = pp.heatmap(\n",
+        "    enrichment_df,\n",
+        "    x='condition',\n",
+        "    y='pathway',\n",
+        "    value='enrichment',\n",
+        "    size='pvalue',\n",
+        "    cmap='RdBu_r',\n",
+        "    center=0,\n",
+        "    sizes=(50, 400),\n",
+        "    title='Pathway Enrichment Analysis',\n",
+        "    legend_kws={\n",
+        "        'value_label': 'Enrichment Score',\n",
+        "        'size_label': 'P-value',\n",
+        "    },\n",
+        ")\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Clustered Heatmap\n",
+        "Use complex_heatmap with clustering to automatically reorder\n",
+        "rows and columns and add dendrograms.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create larger expression matrix for clustering\n",
+        "np.random.seed(123)\n",
+        "n_genes = 20\n",
+        "n_samples = 10\n",
+        "# Create data with some structure for interesting clustering\n",
+        "cluster_matrix = pd.DataFrame(\n",
+        "    np.random.randn(n_genes, n_samples),\n",
+        "    index=['Gene_' + str(i) for i in range(n_genes)],\n",
+        "    columns=['Sample_' + str(i) for i in range(n_samples)]\n",
+        ")\n",
+        "# Add some cluster structure\n",
+        "cluster_matrix.iloc[:10, :5] += 1.5\n",
+        "cluster_matrix.iloc[10:, 5:] += 1.5\n",
+        "fig, axes = (\n",
+        "    pp.complex_heatmap(\n",
+        "        cluster_matrix,\n",
+        "        cmap='RdBu_r',\n",
+        "        center=0,\n",
+        "        row_cluster=True,\n",
+        "        col_cluster=True,\n",
+        "        figsize=(5, 5),\n",
+        "    )\n",
+        "    .build()\n",
+        ")\n",
+        "plt.suptitle('Clustered Heatmap with Dendrograms', y=1.02)\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Complex Heatmap with Margin Plots\n",
+        "Add bar plots to the margins to show summary statistics.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create expression data\n",
+        "np.random.seed(456)\n",
+        "genes = ['TP53', 'BRCA1', 'EGFR', 'KRAS', 'MYC', 'PIK3CA']\n",
+        "samples = ['S1', 'S2', 'S3', 'S4', 'S5']\n",
+        "expr_matrix = pd.DataFrame(\n",
+        "    np.random.randn(len(genes), len(samples)),\n",
+        "    index=genes,\n",
+        "    columns=samples\n",
+        ")\n",
+        "# Create summary data for margins\n",
+        "# Column (sample) summaries - total expression per sample\n",
+        "col_summary = pd.DataFrame({\n",
+        "    'sample': samples,\n",
+        "    'total': expr_matrix.sum(axis=0).values,\n",
+        "})\n",
+        "# Row (gene) summaries - mean expression per gene\n",
+        "row_summary = pd.DataFrame({\n",
+        "    'gene': genes,\n",
+        "    'mean': expr_matrix.mean(axis=1).values,\n",
+        "})\n",
+        "fig, axes = (\n",
+        "    pp.complex_heatmap(\n",
+        "        expr_matrix,\n",
+        "        cmap='viridis',\n",
+        "        figsize=(4, 4),\n",
+        "        row_cluster=True,\n",
+        "        col_cluster=True,\n",
+        "    )\n",
+        "    .add_top(\n",
+        "        pp.barplot,\n",
+        "        data=col_summary,\n",
+        "        x='sample',\n",
+        "        y='total',\n",
+        "        height=20,\n",
+        "        color='steelblue',\n",
+        "    )\n",
+        "    .build()\n",
+        ")\n",
+        "plt.suptitle('Complex Heatmap with Summary Bar Plot', y=1.02)\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Dot Heatmap for GO Enrichment\n",
+        "A common visualization for gene ontology enrichment results.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Simulated GO enrichment results\n",
+        "go_terms = [\n",
+        "    'GO:0006915 apoptotic process',\n",
+        "    'GO:0007049 cell cycle',\n",
+        "    'GO:0006281 DNA repair',\n",
+        "    'GO:0008152 metabolic process',\n",
+        "    'GO:0006955 immune response',\n",
+        "]\n",
+        "comparisons = ['Drug vs Control', 'Combo vs Control', 'Combo vs Drug']\n",
+        "go_data = []\n",
+        "for term in go_terms:\n",
+        "    for comp in comparisons:\n",
+        "        go_data.append({\n",
+        "            'GO_term': term,\n",
+        "            'comparison': comp,\n",
+        "            'fold_enrichment': np.random.uniform(1, 5),\n",
+        "            'neg_log_pvalue': np.random.uniform(1, 10),\n",
+        "        })\n",
+        "go_df = pd.DataFrame(go_data)\n",
+        "fig, ax = pp.heatmap(\n",
+        "    go_df,\n",
+        "    x='comparison',\n",
+        "    y='GO_term',\n",
+        "    value='fold_enrichment',\n",
+        "    size='neg_log_pvalue',\n",
+        "    cmap='Reds',\n",
+        "    sizes=(30, 350),\n",
+        "    title='GO Enrichment Analysis',\n",
+        "    legend_kws={\n",
+        "        'value_label': 'Fold Enrichment',\n",
+        "        'size_label': '-log10(p-value)',\n",
+        "    },\n",
+        ")\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Square Heatmap\n",
+        "Force square cells for correlation matrices or similar data.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create correlation matrix\n",
+        "corr_data = pd.DataFrame(\n",
+        "    np.random.randn(10, 50)\n",
+        ").T.corr()\n",
+        "corr_data.index = ['Var_' + str(i) for i in range(10)]\n",
+        "corr_data.columns = corr_data.index\n",
+        "fig, ax = pp.heatmap(\n",
+        "    corr_data,\n",
+        "    cmap='coolwarm',\n",
+        "    center=0,\n",
+        "    vmin=-1,\n",
+        "    vmax=1,\n",
+        "    square=True,\n",
+        "    linewidths=0.5,\n",
+        "    title='Correlation Matrix',\n",
+        ")\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Complex Heatmap Without Dendrograms\n",
+        "Cluster the data but hide the dendrograms.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig, axes = (\n",
+        "    pp.complex_heatmap(\n",
+        "        cluster_matrix,\n",
+        "        cmap='viridis',\n",
+        "        row_cluster=True,\n",
+        "        col_cluster=True,\n",
+        "        row_dendrogram=False,  # Hide row dendrogram\n",
+        "        col_dendrogram=False,  # Hide column dendrogram\n",
+        "        figsize=(5, 5),\n",
+        "    )\n",
+        "    .build()\n",
+        ")\n",
+        "plt.suptitle('Clustered Heatmap (Dendrograms Hidden)', y=1.02)\n",
+        "plt.show()\n"
       ]
     }
   ],
